<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dialog_title">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@mipmap/sudoku"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/level_dialog"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center">
        <Button
            android:id="@+id/btn_level_1"
            style="@style/button"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_info_selector"
            android:text="@string/level_1"/>
        <Button
            android:id="@+id/btn_level_2"
            style="@style/button"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_success_selector"
            android:text="@string/level_2"
            android:layout_below="@id/btn_level_1"/>
        <Button
            android:id="@+id/btn_level_3"
            style="@style/button"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_warning_selector"
            android:text="@string/level_3"
            android:layout_below="@id/btn_level_2"/>
        <Button
            android:id="@+id/btn_level_4"
            style="@style/button"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_danger_selector"
            android:layout_marginBottom="10dp"
            android:text="@string/level_4"
            android:layout_below="@id/btn_level_3"/>
    </RelativeLayout>
</LinearLayout>