<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btn_start"
            style="@style/button"
            android:background="@drawable/button_danger_selector"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/startGame"/>
        <Button
            android:id="@+id/btn_help"
            style="@style/button"
            android:background="@drawable/button_danger_selector"
            android:layout_width="180dp"
            android:layout_marginTop="10dp"
            android:text="@string/help"
            android:layout_below="@id/btn_start"/>
        <Button
            android:id="@+id/btn_about"
            style="@style/button"
            android:background="@drawable/button_danger_selector"
            android:layout_width="180dp"
            android:layout_marginTop="10dp"
            android:text="@string/about"
            android:layout_below="@id/btn_help"/>
        <Button
            android:id="@+id/btn_version"
            style="@style/button"
            android:background="@drawable/button_danger_selector"
            android:layout_width="180dp"
            android:layout_marginTop="10dp"
            android:text="@string/checkVersion"
            android:layout_below="@id/btn_about"/>
    </RelativeLayout>

</RelativeLayout>