<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/success">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@mipmap/sudoku"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finish_dialog"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView

            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/finish"
            />
        <TextView
            android:id="@+id/used_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/success"
            android:textSize="25dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn_finish_back"
                    style="@style/button"
                    android:background="@drawable/button_info_selector"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/back" />
                <Button
                    android:id="@+id/btn_finish_again"
                    style="@style/button"
                    android:background="@drawable/button_success_selector"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/again"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</LinearLayout>